@@ -1,3 +1,8 @@
+TAG: annotload-6-0-15-?
+DATE: 10/10/2019
+STAFF: lec 
+TR13007/RNA Seq project/VOC_Evidence_Property autosequence
+
 TAG: annotload-6-0-14-1
 DATE: 04/03/2019
 STAFF: lec 
